# vlc

./: .dockerignore  .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
backfill/: load_historical.py
compose/: .env.example  .htpasswd.example  docker-compose.yml  nginx.conf
compose/grafana/: README.md  SETUP_NOTES.md
compose/grafana/dashboards/: air_quality.json
connect/: .dockerignore  Dockerfile
connect/config/: README.md  jdbc-sink.schema.json  jdbc-sink.timescale.air.json  jdbc-sink.timescale.weather.json
connect/producer/: Dockerfile
consumer/: Dockerfile  sink.py
db/init/: 001-extensions.sql  010-bootstrap.sql  020-views.sql  020-vlc-password.override.sql  030-consolidate-station-ids.sql  099-final-checks.sql
docs/: README.md  abbrev_term.txt  all_datasets.txt  architecture.mmd  estacions-atmosferiques-estaciones-atmosfericas_metadata_20251025_222734.json  estacions-contaminacio-atmosferiques-estaciones-contaminacion-atmosfericas_metadata_20251025_222628.json  exploracion_estacions-atmosferiques-estaciones-atmosfericas.txt  exploracion_estacions-contaminacio-atmosferiques-estaciones-contaminacion-atmosfericas.txt  pressure_vs_elevation.txt  pwsh_peak_into_datasets.txt  secrel.md  station_mapping.md
grafana/: ACCESS.md  README.md  SETUP_NOTES.md
grafana/dashboards/: air_quality.json  system_metrics.json  weather.json
grafana/provisioning/datasources/: alertmanager.yml  prometheus.yml  timescaledb.yml
infra/: cloud-init.yaml  main.bicep
jmx-exporter/: connect.yml  kafka.yml  schema-registry.yml
monitoring/: README.md
monitoring/alertmanager/: alertmanager.yml
monitoring/prometheus/: alerts.yml  prometheus.yml
producer/: Dockerfile.air  Dockerfile.weather  README.md  air_producer.py  requirements.txt  resilience.py  weather_producer.py
producer/schemas/: air.json  weather.json
schemas/: README.md
scripts/: analyze_measurements.py  analyze_stations.py  analyze_weather_measurements.py  bootstrap_kafka.sh  bulk_download.py  check_frequency.py  find_closest_features.py  post_connectors.sh  print_air_geo.py  print_air_measurements.py  print_all_datasets.py  replay_from_timescale.py  set_vlc_db_password.sh  sync-dev-secrets.sh  validate_schema.py  vlc_air_fields_dtype.ps1  vlc_weather_fields_dtype.ps1  weather_frequency_check.py  weather_snapshot_watcher.py
tests/: README.md  TEST_SUMMARY.md  __init__.py  conftest.py
tests/unit/: __init__.py  test_connect_config.py  test_docker_image.py  test_kafka_connect.py  test_kafka_topics.py  test_producer_air.py  test_producer_common.py  test_producer_weather.py  test_resilience.py
